[package]
name = "parking"
version = "2.0.0"
authors = [
  "Stjepan Glavina <stjepang@gmail.com>",
  "The Rust Project Developers",
]
edition = "2018"
rust-version = "1.39"
description = "Thread parking and unparking"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/smol-rs/parking"
homepage = "https://github.com/smol-rs/parking"
documentation = "https://docs.rs/parking"
keywords = ["park", "notify", "thread", "wake", "condition"]
categories = ["concurrency"]
exclude = ["/.*"]

[dev-dependencies]
easy-parallel = "3.0.0"
